Fixed overflow issue in EditOverallModal. Updated design for Add Modal, tried updating designs for UpdateItemPanel.

--- a/AdminDashboard/src/components/Management/AddItem.css
+++ b/AdminDashboard/src/components/Management/AddItem.css
@@ -12,37 +12,75 @@
 }
 
 .modal-content {
-    background: linear-gradient(
+    /* background: linear-gradient(
         45deg,
         rgb(135, 197, 255) 0%,
         rgba(191, 191, 191, 0.95) 100%
-    );
-    padding: 1.75rem;
+    ); */
+    background: #ffffff;
     border-radius: 10px;
     width: 80%;
     height: 80%;
     max-width: 700px;
     max-height: 700px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
-    font-size: 30px;
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    padding-bottom: 2rem;
 }
 
-.modal-content h3 {
-    border-bottom: solid rgba(0, 0, 0, 0.28);
+.modal-header-row {
+    margin-top: 0;
+    border-bottom: solid 1px black;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 0.5rem;
+    background: linear-gradient(
+        90deg,
+        rgba(29, 45, 69, 1) 0%,
+        rgba(34, 50, 73, 1) 100%
+    );
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
+    color: #ffffff;
+    display: flex;
+    justify-content: space-between;
+}
+
+.modal-header-row h2 {
+    font-size: 30px;
+}
+
+.modal-header-row-right {
+    justify-content: flex-end;
+}
+
+.modal-close-button {
+    background: transparent;
+    border: none;
+    color: #ffffff;
+    cursor: pointer;
+}
+
+.modal-close-button svg {
+    font-size: 30px;
 }
 
 .modal-body {
     flex-grow: 1;
     overflow-y: auto;
-    margin-top: 1rem;
     padding-right: 2rem; /* gives space for scrollbar */
 }
 
 .modal-form {
-    font-size: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1rem;
 }
 
 .modal-form .form-group {
@@ -50,10 +88,10 @@
 }
 
 .modal-form label {
+    font-family: "Roboto Flex", sans-serif;
     display: block;
     margin-bottom: 0.5rem;
-    font-weight: bold;
-    text-transform: capitalize;
+    font-weight: 500;
 }
 
 .modal-form textarea {
