--- a/AdminDashboard/src/index.css
+++ b/AdminDashboard/src/index.css
@@ -24,8 +24,26 @@
 
     --table-even: #e9e9e9;
     --table-odd: #f5f5f5;
-    --table-hover: #bfe0ff;
-    --table-selected: #7fc1ff;
+    /* --table-hover: #bfe0ff; */
+    /* --table-selected: #7fc1ff; */
+    --table-hover: linear-gradient(
+        90deg, 
+        rgba(215, 223, 255,0.4) 0%,
+        rgba(209, 243, 255,0.4) 100%
+    );
+    --table-selected: linear-gradient(
+        90deg, 
+        rgba(215, 223, 255) 0%,
+        rgb(209, 243, 255) 100%
+    );
+    --update-item-panel: linear-gradient(
+        90deg, 
+        rgba(215, 223, 255, 0.95) 0%,
+        rgb(209, 243, 255) 100%
+    );
+    --update-item-panel-shadow: rgba(190, 196, 225, 0.95);
+    --update-item-panel-button: rgba(0, 0, 0, 0.8);
+    --update-item-panel-h4: #3b3b3b;
 
     /* For Dashboard */
     --dash-card: #f1f1f1c8;
@@ -99,6 +117,14 @@
     --tabs-header-li: #b1b1b1;
     --tabs-header-li-hover: rgba(33, 33, 33, 0.9);
     --stats-title: #ccdbf9;
+    --update-item-panel: linear-gradient(
+        270deg,
+        rgba(55, 61, 74, 1) 0%,
+        rgba(32, 52, 80, 1) 100%
+    );
+    --update-item-panel-shadow: rgba(18, 33, 53, 0.95);
+    --update-item-panel-button: rgba(255, 255, 255, 0.95);
+    --update-item-panel-h4: #d4d4d4;
 }
 
 * {
